[package]
name = "tui-term"
description = "A pseudoterminal widget for ratatui"
version = "0.1.8"
authors = ["Alexander Kenji Berthold <aks.kenji@protonmail.com>"]
edition = "2021"
include = [
  "src/**/*",
  "examples/*",
  "benches/*",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
]
license = "MIT"

readme = "README.md"
documentation = "https://docs.rs/tui-term/latest/tui-term/"
repository = "https://github.com/a-kenji/tui-term"

autoexamples = true
rust-version = "1.70.0"


keywords = ["tui", "terminal", "ratatui", "tty", "multiplexer"]

categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [workspace]
# members = [
#     "bench",
# ]

[features]
unstable = ["dep:portable-pty"]

[dependencies]
ratatui = "0.26.1"
vt100 = "0.15.2"
portable-pty = { version = "0.8.1", optional = true }

[dev-dependencies]
bytes = "1.6.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
# divan now needs unstable rust, activate manually for now
# divan = "0.1.7"
#TODO: go back to release version, once it is fixed
# iai = "0.1.1"
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }
insta = "1.34.0"
once_cell = "1.19.0"

# for examples
crossterm = "0.27"
portable-pty = "0.8.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3

[profile.bench]
lto = "thin"

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "iai"
harness = false

[[bench]]
name = "divan"
harness = false

[[example]]
name = "simple_ls_chan"
doc-scrape-examples = true

[[example]]
name = "simple_ls_rw"
doc-scrape-examples = true

[[example]]
name = "long_running"
doc-scrape-examples = true

[[example]]
name = "nested_shell"
doc-scrape-examples = true

[[example]]
name = "nested_shell_async"
doc-scrape-examples = true

[[example]]
name = "smux"
doc-scrape-examples = true

[package.metadata.docs.rs]
all-features = true
# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
